# urls_organizer

./: Makefile  README.md  SECURITY.md  install.sh  personal_utils.py  pyproject.toml  requirements.txt  urls_organizer  urls_organizer.py
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst
urls_organizer/: __init__.py  __main__.py  cli.py  consts.py  logs.py  personal_utils.py  urls.py  utils.py
