[tool.poetry]
name = "urls_organizer"
version = "1.1.0"
description = "Organize your URL saved like a pro!"
license = "GPL-3.0-only"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/urls_organizer"
keywords = ["url", "script", "cli", "python", "poetry"]

[tool.poetry.dependencies]
python = "^3.11"
natsort = "^8.4.0"
platformdirs = "^3.11.0"
prettytable = "^3.9.0"
pyfiglet = "^0.8.post1"
requests = "^2.31.0"
rich = "^13.5.2"
rich-argparse-plus = "^0.3.1.4"
string-grab = "^1.3.0"
termcolor = "^2.3.0"
tqdm = "^4.66.1"
validators = "^0.22.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
